--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.4.3",
+    "@farcaster/core": "^0.13.7",
+    "@unlock-protocol/contracts": "^0.0.22",
+    "@unlock-protocol/unlock-js": "^0.43.2",
+    "ethers": "v5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
