--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@farcaster/core": "^0.13.7",
     "@unlock-protocol/contracts": "^0.0.22",
     "@unlock-protocol/unlock-js": "^0.43.2",
+    "axios": "^1.6.7",
     "ethers": "v5",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
