--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "@coinbase/onchainkit": "^0.4.3",
     "@farcaster/core": "^0.13.7",
+    "@lighthouse-web3/sdk": "^0.3.0",
+    "@pinata/sdk": "^2.1.0",
+    "@resvg/resvg-js": "2.2.0",
     "@unlock-protocol/contracts": "^0.0.22",
     "@unlock-protocol/unlock-js": "^0.43.2",
+    "convert-svg-to-png": "^0.6.4",
+    "d3": "^7.8.5",
     "ethers": "v5",
     "next": "14.1.0",
+    "nft.storage": "^7.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "satori": "0.0.44",
+    "satori-html": "0.3.2",
     "viem": "^2.7.2"
   },
   "devDependencies": {
