--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@airstack/airstack-react": "^0.6.2",
     "@coinbase/onchainkit": "^0.4.3",
     "@farcaster/core": "^0.13.7",
     "@lighthouse-web3/sdk": "^0.3.0",
